--- a/wp-content/themes/pariscope/composer.json
+++ b/wp-content/themes/pariscope/composer.json
@@ -1,5 +1,5 @@
 {
-	"name"        : "justintadlock/mythic",
+	"name"        : "spigotdesign/pariscope",
 	"type"        : "wordpress-theme",
 	"description" : "A WordPress starter theme.",
 	"keywords"    : ["wordpress"],
@@ -9,16 +9,23 @@
 		{
 			"name"    : "Bryan Hoffman",
 			"email"   : "bryan@spigotdesign.com",
-			"homepage": "http://justintadlock.com"
+			"homepage": "http://spigotdesign.com/"
 		}
 	],
-        "require": {
-                "php" : ">=5.6",
-                "composer/installers" : "~1.0",
-                "justintadlock/hybrid-core" : "5.0.x-dev"
-        },
+
+	"autoload"    : {
+		"psr-4" : {
+			"Pariscope\\" : "app/"
+		}
+	},
+    "require": {
+            "php" : ">=5.6",
+            "composer/installers" : "~1.0",
+            "justintadlock/hybrid-core" : "^5.0.0",
+            "justintadlock/hybrid-carbon" : "~1.0"
+    },
 	"require-dev": {
-		"wp-coding-standards/wpcs": "^1.0.0",
-		"wimg/php-compatibility": "^8.2"
+		"wptrt/wpthemereview": "*",
+		"dealerdirect/phpcodesniffer-composer-installer": "0.4.4"
 	}
 }
