--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,7 @@ wp-content/themes/*
 !wp-content/themes/pariscope/
 
 # Ignore vendor files
-vendor
+wp-content/themes/pariscope/vendor
 
 # Other files to ignore:
 sitemap.xml
