--- a/package.json
+++ b/package.json
@@ -7,40 +7,26 @@
 	"homepage": "https://spigotdesign.com/",
 	"main": "resources/js/app.js",
 	"scripts": {
-		"build": "npm run prod && npm run i18n && npm run export",
-		"dev": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-		"watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-		"watch:sync": "cross-env sync=1 NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-		"hot": "cross-env sync=1 NODE_ENV=development webpack-dev-server --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-		"prod": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-		"export": "cross-env export=1 NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-		"lint": "npm run lint:styles && npm run lint:scripts && npm run lint:php",
-		"lint:styles": "cross-env stylelint './resources/scss/**/*.scss' --syntax scss",
-		"lint:scripts": "cross-env eslint './resources/js/**/*.js'",
-		"lint:php": "cross-env ./vendor/bin/phpcs . --runtime-set testVersion 5.6- -s",
-		"i18n": "npm run i18n:textdomain && npm run i18n:pot",
-		"i18n:textdomain": "npx wpi18n addtextdomain --exclude=vendor,node_modules",
-		"i18n:pot": "npx wpi18n makepot",
+		"scss:screen": "sass resources/scss/screen.scss dist/css/screen.css",
+		"scss:editor": "sass resources/scss/editor.scss dist/css/editor.css",
+		"scss": "npm run scss:screen && npm run scss:editor",
+		"cssmin:screen": "cleancss -o dist/css/screen.css dist/css/screen.css",
+		"cssmin:editor": "cleancss -o dist/css/editor.css dist/css/editor.css",
+		"cssmin": "npm-run-all --parallel cssmin:*",
+		"uglify-js": "uglifyjs -o resources/js/app.js dist/js/app.js",
+		"prod": "npm run cssmin && run uglify-js",
+		"watch:scss": "onchange 'resources/scss/**/*.scss' -- npm run scss",
+		"watch:js": "onchange 'resources/js/*.js' -- npm run uglify-js",
+		"watch": "npm-run-all --parallel watch:*",
 		"rename": "theme-claim"
 	},
 	"devDependencies": {
-		"browser-sync": "^2.26.3",
-		"browser-sync-webpack-plugin": "2.2.2",
-		"copy-webpack-plugin": "^4.6.0",
-		"cross-env": "^5.2.0",
-		"eslint": "^5.12.0",
-		"eslint-config-wordpress": "^2.0.0",
-		"imagemin-mozjpeg": "^6.0.0",
-		"imagemin-webpack-plugin": "^2.4.0",
-		"laravel-mix": "^4.0.14",
-		"node-wp-i18n": "^1.2.2",
-		"postcss-preset-env": "^6.5.0",
-		"rimraf": "^2.6.3",
-		"sass": "^1.16.0",
-		"sass-loader": "^7.1.0",
-		"stylelint": "^9.9.0",
-		"stylelint-config-wordpress": "^13.1.0",
-		"theme-claim": "^0.1.2",
-		"vue-template-compiler": "^2.5.22"
+		"clean-css-cli": "^5.6.0",
+		"npm": "^8.7.0",
+		"npm-run-all": "4.1.5",
+		"onchange": "^7.1.0",
+		"sass": "^1.50.1",
+		"theme-claim": "^0.2.0",
+		"uglify-js": "^3.15.4"
 	}
 }
