--- a/composer.json
+++ b/composer.json
@@ -19,9 +19,14 @@
 		}
 	},
     "require": {
-            "php" : ">=5.6",
+            "php" : ">=7.4",
             "composer/installers" : "~1.0",
             "justintadlock/hybrid-core" : "^5.0.0",
             "justintadlock/hybrid-carbon" : "~1.0"
-    }
+    },
+	"config": {
+		"allow-plugins": {
+			"composer/installers": true
+		}
+	}
 }
